[gd_scene load_steps=2 format=3 uid="uid://bfbrxtkx738bi"]

[ext_resource type="Script" uid="uid://tlvdh3corny2" path="res://new folder/side_slide_container.gd" id="1_6kpx5"]

[node name="side_slide_container" type="Container"]
clip_contents = true
mouse_filter = 2
script = ExtResource("1_6kpx5")
active_tab_index = null

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resized" from="." to="." method="_on_resized"]
